Made the page more responsive by fixing whitespaces on larger screens.Also modified the color scheme of the AboutUs page added by Nipun.

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,9 @@
 .container-fluid{
     padding-top: 20px;
     margin:auto;
+    height: auto !important;
     font-family: 'Roboto Mono', monospace;
     background-image: linear-gradient(to bottom,#c6ff65, #6fffff,#00a1a9);
-    /* background-color: #92cc31; */
 }
 
 .card{
@@ -55,3 +55,42 @@ h1{
     font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
+
+
+.h1{
+    text-align: center;
+    font-family: Arial, sans-serif;
+    color: inherit;
+}
+
+  .mission {
+    text-align: left;
+    font: italic;
+    font-family: 'Times New Roman', Times, serif;
+    color: darkslategray;
+  }
+
+  p{
+    text-align: left;
+    font-family: cursive;
+    /* color: darkred; */
+  }
+
+  .founders {
+    border-radius: 55%;
+    /* padding: 5px; */
+    /* width: 150px; */
+    color: aliceblue;
+    display: block;
+    margin: auto;
+    width: auto;
+  }
+
+  .ourheroes {
+    font-family: Arial, Helvetica, sans-serif;
+    font: bold;
+    color: black;
+  }
+
+  
+  
